--- a/src/style.css
+++ b/src/style.css
@@ -19,7 +19,7 @@ form {
 
 .container {
   width: 700px;
-  height: 750px;
+  height: 575px;
   position: relative;
   background-color: #fff;
   border-radius: 15px;
@@ -39,12 +39,16 @@ h3 {
 }
 
 h1 {
-  margin: 35px auto;
+  margin: 30px 0 0 20px;
 }
 
 img {
-  height: 120px;
-  width: 140px;
+  height: 110px;
+  width: 130px;
+}
+
+#conditions p {
+  line-height: normal;
 }
 
 #location {
@@ -70,7 +74,7 @@ img {
 
 .currentweather {
   margin: 30px 50px 0 50px;
-  padding: 5px 0 0;
+  padding-top: 15px;
   border-radius: 15px;
   background-color: #f0f0f5;
 }
@@ -84,21 +88,13 @@ h2 {
   font-weight: bold;
 }
 
-h4 {
-  margin-top: 5px;
-}
-
-h4 i {
+h5 i {
   color: #ffb900;
   font-size: 30px;
 }
 
-.weatherimg img {
-  display: block;
-  margin: 25px auto;
-}
-
 .weekweather {
+  padding-top: 10px;
   border-radius: 15px;
   background-color: #f0f0f5;
 }
