--- a/src/style.css
+++ b/src/style.css
@@ -28,6 +28,10 @@ form {
   text-align: center;
 }
 
+p {
+  font-size: 12px;
+}
+
 p i {
   color: #ffb900;
   font-size: 60px;
@@ -36,6 +40,7 @@ p i {
 
 h3 {
   font-style: italic;
+  margin-top: -15px;
 }
 
 h1 {
